--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="login">LogIn</string>
     <string name="email">Email</string>
     <string name="sign_up">Sign Up</string>
+    <string name="username">Username</string>
 
 
 </resources>
