--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
     <string name="app_name">KOUBitirme</string>
 
-    <string name="password">Password</string>
+
     <string name="login">LogIn</string>
-    <string name="email">Email</string>
     <string name="sign_up">Sign Up</string>
     <string name="username">Username</string>
 
@@ -13,6 +12,17 @@
     <string name="listt">listt</string>
     <string name="error_try_again">Error! Try Again</string>
     <string name="loading">loading</string>
+    <string name="mama_ba">Mama Bağışı</string>
+    <string name="sahiplen">Sahiplen</string>
+    <string name="animal_name">Animal Name</string>
+    <string name="animal_breed">Animal Breed</string>
+    <string name="docile">Docile</string>
+    <string name="education">Education</string>
+    <string name="age">Age</string>
+    <string name="name">Name</string>
+    <string name="lastname">LastName</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
 
 
 </resources>
