--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="lastname">LastName</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="talebiniz_bar_na_a_iletilmi_tir">Talebiniz barınağa iletilmiştir</string>
 
 
 </resources>
